--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="menu.css">
 </head>
 
 <body>
@@ -9,8 +9,8 @@
         <h1> NATHALIE JOIRIS</h1>
     </header>
     <div class="tileDiv">
-        <p><a href="sculptures.html">SCUPLTURES</a></p>
-        <p><a href="photos.html">PHOTOGRAPHIE</a></p>
+        <h3><a href="sculptures.html">SCUPLTURES</a></h3>
+        <h3><a href="photos.html">PHOTOGRAPHIE</a></h3>
     </div>
 </body>
 
