--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="fonts.css">
+
 </head>
 
 <body>
