--- a/sculptures.html
+++ b/sculptures.html
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="menu.css">
+    <link rel="stylesheet" type="text/css" href="fonts.css">
 </head>
 
 <body>
@@ -13,15 +14,19 @@
         <h3>SCULPTURES</h3>
     </div>
     <div class="menus">
-        <p>
-            <a>Works</a>
-        </p>
+        <div>Works
+            <div class="submenu">
+                <a href="./Contact/index.html" class="subitem">Sculpture - Living/interactive</a><br>
+                <a class="subitem">Installations</a>
+            </div>
+            
+        </div>
         <p>
             <a href="./Biography/index.html">Biography</a>
         </p>
-        <p>
+        <div>
             <a>Bibliography</a>
-        </p>
+        </div>
         <p>
             <a href="./Texts/index.html">Texts</a>
         </p>
