--- a/Sapporo/index.html
+++ b/Sapporo/index.html
@@ -8,11 +8,11 @@
 
     <div class="title"><h1>SAPPORO</h1></div>
     <div class="subtitle"><h3>Ceci est mon sous-titre</h3></div>
-    <p class="textt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Fusce at facilisis justo. Quisque condimentum metus sit amet est mollis 
-        faucibus. Suspendisse congue consectetur ipsum, in commodo neque posuere 
-        vel. Mauris eros ante, tempor at euismod eget, bibendum a justo. 
-        Nam efficitur nisl at interdum ultricies. Nunc fringilla purus massa, vel.</p>
+    <div class="textt">
+        <a href="previewPhotos.html">Maisons</a>
+        <a href="previewPhotos.html">Reflets</a>
+        <a href="previewPhotos.html">Autres</a>
+    </div>
     <p class="back"><a href="../photos.html">Retour à la page d'accueil</a></p>
     <img src="1.jpg" class="p">
     <div class="moreP"><p><a href="./viewPhoto.html">Voir toutes les photos</a></p></div>
