--- a/photos.html
+++ b/photos.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" type="text/css" href="fonts.css">
+    <title>Photos - Nathalie Joiris</title>
 
 </head>
 
@@ -10,7 +11,6 @@
     <header>
         <h1> NATHALIE JOIRIS</h1>
     </header>
-    <!--<img src="./fonds/1.jpg" class="mainImage">-->
     <div class="tileDiv">
         <h3>PHOTOGRAPHIE</h3>
     </div>
@@ -28,12 +28,14 @@
             <a href="./Photos/SaoPaulo/index.html">Sao Paulo</a>
         </p>
 
+
+
     </div>
 </body>
 
 <script language="javascript">
     function aff_fond() {
-        var urlString = "url('fonds/F"+ (Math.floor(Math.random() * 20)+1)+".jpg')";
+        var urlString = "url('fonds/F" + (Math.floor(Math.random() * 20) + 1) + ".jpg')";
         document.body.style.backgroundImage = urlString;
     }
 
