--- a/sculptures.html
+++ b/sculptures.html
@@ -9,7 +9,6 @@
     <header>
         <h1> NATHALIE JOIRIS</h1>
     </header>
-    <!--<img src="./fonds/1.jpg" class="mainImage">-->
     <div class="tileDiv">
         <h3>SCULPTURES</h3>
     </div>
@@ -31,7 +30,7 @@
             <a href="./Texts/index.html">Texts</a>
         </p>
         <p>
-            <a href="./Contact/index.html">Contact</a>
+            <a href="mailto:john.flex.pro@gmail.com">Contact</a>
         </p>
         <p>
             <a href="https://www.twitter.com"><img src="twitter.png" style="max-height:25px;width:auto;"></a>
