--- a/Photos/Sapporo/Mondes/previewPhotos.html
+++ b/Photos/Sapporo/Mondes/previewPhotos.html
@@ -18,7 +18,9 @@
     <script>
 
             function SetPhoto(Ellement) {
-                document.getElementById("mainP").src = Ellement.src;
+                var tempVar = Ellement.getAttribute("src").toString();
+                tempVar = tempVar.substring(1,tempVar.length);
+                document.getElementById("mainImage").src =tempVar;
             }
             
         </script>
