Changing Texts , Works and Videos

--- a/works.html
+++ b/works.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="menu.css">
     <link rel="stylesheet" type="text/css" href="fonts.css">
+    <title>Works - Nathalie Joiris</title>
+
 </head>
 
 <body>
@@ -10,33 +12,30 @@
         <h1> NATHALIE JOIRIS</h1>
     </header>
     <div class="tileDiv">
-        <h3>SCULPTURES</h3>
+        <h3>Works</h3>
     </div>
     <div class="menus">
         <p>
-            <a href="./works.html">Works</a>
+            <a href="./Works/Sculptures/index.html">Sculptures - living / interactive</a>
         </p>
         <p>
-            <a href="./Biography/index.html">Biography</a>
+            <a href="./Works/Installations/index.html">Installations</a>
         </p>
         <p>
-            <a href="./bibliography.html">Biography</a>
+            <a href="./Works/InstallationsInteractives/index.html">Installations - interactive / multimedia</a>
         </p>
         <p>
-            <a href="./Texts/index.html">Texts</a>
+            <a href="./Works/Videos/index.html">Videos</a>
         </p>
-        <p>
-            <a href="mailto:john.flex.pro@gmail.com">Contact</a>
-        </p>
-        <p>
-            <a href="https://www.twitter.com"><img src="twitter.png" style="max-height:25px;width:auto;"></a>
-        </p>
+
+
+
     </div>
 </body>
 
 <script language="javascript">
     function aff_fond() {
-        var urlString = "url('fonds/F"+ (Math.floor(Math.random() * 20)+1)+".jpg')";
+        var urlString = "url('fonds/F" + (Math.floor(Math.random() * 20) + 1) + ".jpg')";
         document.body.style.backgroundImage = urlString;
     }
 
