Adding Back button

--- a/Bibliography/index.html
+++ b/Bibliography/index.html
@@ -11,12 +11,10 @@
     <div class="title"><h1>TEXTS</h1></div>
     <div class="subtitle"><h3> </h3></div>
     <div class="textt">
-        <p onmouseover="updateText(0)"><a>Ar(t)ree. Publication 2017</a></p>
-        <p onmouseover="updateText(1)"><a>Nathalie Joiris, Sculpture interactives à la Médiatine publication Texte de Pierre-Yves Desaive 2013</a></p onmouseover="updateText(0)">
-        <p onmouseover="updateText(2)"><a>Art004+ publication. Texte de Pierre-Olivier Rollin 2004</a></p>
-        <p onmouseover="updateText(3)"><a>Arbres / Sculptures. Monography. Texte de Paul Joiris 1999</a></p>
-        <p onmouseover="updateText(4)"><a>Live tree in White Chapel Hospital, London 1997</a></p>
-        <p onmouseover="updateText(5)"><a>And … If the tree refused … ? Texte de Felix Roulin 1994</a></p>
+        <p onmouseover="updateText(0)"><a>Press</a></p>
+        <p onmouseover="updateText(1)"><a>Publications</a></p onmouseover="updateText(0)">
+        <p onmouseover="updateText(2)"><a>Video - Multimedia</a></p>
+
     </div>
     <p class="back"></p>
     <div class="moreP"><p></p></div>
