--- a/Photos/SaoPaulo/Autres/previewPhotos.html
+++ b/Photos/SaoPaulo/Autres/previewPhotos.html
@@ -23,6 +23,9 @@
     <div id="mins2"><img src="V04.jpg" onclick="SetPhoto(this)"><img src="V05.jpg" onclick="SetPhoto(this)"><img
             src="V06.jpg" onclick="SetPhoto(this)"></div>
     <a href="gallery.html" id="mainImageContainer"><img id="mainImage" src="01.jpg"></a>
+    <a style="display: block; height: 50px; width: 50px; position: fixed; bottom:10px; left: 0px;" href="../index.html"><img src="retour.png" style="display: block;max-width: 100%;max-height: 100% ;"></a>
+
+
 </body>
 <script>
 
