--- a/Photos/Japan/index.html
+++ b/Photos/Japan/index.html
@@ -19,6 +19,8 @@
     <!--<p class="back"><a href="../photos.html">Retour à la page d'accueil</a></p>-->
     <a id="mainA" href="./House stories/previewPhotos.html"><img src="./House stories/01.jpg" class="p"></a>
 
+    <a style="display: block; height: 50px; width: 50px; position: fixed; bottom:10px; left: 0px;" href="../../photos.html"><img src="retour.png" style="display: block;max-width: 100%;max-height: 100% ;"></a>
+
     
     <script>
         function SetPhoto(Ellement) {
