--- a/Photos/sample/index.html
+++ b/Photos/sample/index.html
@@ -21,6 +21,8 @@
 
     <a id="mainA" href="./sample2/previewPhotos.html"><img src="./sample2/01.jpg" class="p"></a>
 
+    <a style="display: block; height: 50px; width: 50px; position: fixed; bottom:10px; left: 0px;" href="../../photos.html"><img src="retour.png" style="display: block;max-width: 100%;max-height: 100% ;"></a>
+
     
     <script>
         function SetPhoto(Ellement) {
