--- a/photos.html
+++ b/photos.html
@@ -29,6 +29,7 @@
         </p>
 
     </div>
+    <a style="display: block; height: 50px; width: 50px; position: fixed; bottom:10px; left: 0px;" href="./previewIndex.html"><img src="retour.png" style="display: block;max-width: 100%;max-height: 100% ;"></a>
 </body>
 
 <script language="javascript">
