--- a/sculptures.html
+++ b/sculptures.html
@@ -20,7 +20,7 @@
             <a href="./Biography.html">Biography</a>
         </p>
         <p>
-            <a href="./Bibliography.html">Biography</a>
+            <a href="./Bibliography/index.html">Bibliography</a>
         </p>
         <p>
             <a href="./Texts/index.html">Texts</a>
@@ -32,6 +32,8 @@
             <a href="https://www.twitter.com"><img src="twitter.png" style="max-height:25px;width:auto;"></a>
         </p>
     </div>
+    <a style="display: block; height: 50px; width: 50px; position: fixed; bottom:10px; left: 0px;" href="./previewIndex.html"><img src="retour.png" style="display: block;max-width: 100%;max-height: 100% ;"></a>
+
 </body>
 
 <script language="javascript">
